--- a/roles/sweagle/tasks/main.yml
+++ b/roles/sweagle/tasks/main.yml
@@ -126,6 +126,7 @@
 
 - name: Configure SWEAGLE web site
   include: configure-sweagle-web.yml
+  hosts: webservers
   tags: [ sweagle, sweagle-web ]
 
 
