--- a/roles/sweagle/tasks/configure-sweagle-core.yml
+++ b/roles/sweagle/tasks/configure-sweagle-core.yml
@@ -1,11 +1,11 @@
 ---
-- name: configure SWEAGLE core application.yml
+- name: Configure core application.yml
   template:
     src: "{{ sweagle_version }}/core-application.yml.j2"
     dest: "{{ sweagle_installation_folder }}/bin/core/application.yml"
   tags: [ sweagle-core, sweagle ]
 
-- name: configure SWEAGLE core appConfig.settings
+- name: Configure core appConfig.settings
   template:
     src: "{{ sweagle_version }}/appConfig.settings.j2"
     dest: "{{ sweagle_installation_folder }}/scripts/config/appConfig.settings"
