--- a/roles/sweagle/tasks/main.yml
+++ b/roles/sweagle/tasks/main.yml
@@ -1,11 +1,23 @@
 ---
+
+- name: Unzip package "full_{{ sweagle_version }}.zip"
+  unarchive:
+    src: "full_{{ sweagle_version}}.zip"
+    dest: /tmp
+  tags: [ sweagle, sweagle-core, sweagle-web ]
+
+- name: Configure SWEAGLE web site
+  include: configure-sweagle-web.yml
+  hosts: webservers
+  tags: [ sweagle, sweagle-web ]
+
 - name: Make sure we have a 'wheel' group
   group:
     name: wheel
     state: present
   become: true
   become_user: root
-  tags: [ sweagle-core, sweagle, system ]
+  tags: [ sweagle, sweagle-core, sweagle-web, system ]
   ignore_errors: true
 
 #- name: Allow 'wheel' group to have passwordless sudo
@@ -24,7 +36,7 @@
     name: "{{ sweagle_system_group }}"
     state: present
   become: true
-  tags: [ sweagle-core, sweagle, system ]
+  tags: [ sweagle, sweagle-core, system ]
 
 - name: Create SWEAGLE user "{{sweagle_system_user }}"
   user:
@@ -34,7 +46,7 @@
     system: yes
   become: true
   become_user: root
-  tags: [ sweagle-core, sweagle, system ]
+  tags: [ sweagle, sweagle-core, system ]
 
 - name: Create installation folder "{{ sweagle_installation_folder }}"
   file:
@@ -44,39 +56,33 @@
     group: "{{ sweagle_system_group }}"
     mode: 0775
   become: true
-  tags: [ sweagle-core, sweagle, system ]
-
-- name: Unzip package "full_{{ sweagle_version }}.zip"
-  unarchive:
-    src: "full_{{ sweagle_version}}.zip"
-    dest: /tmp
-  tags: [ sweagle-core, sweagle ]
+  tags: [ sweagle, sweagle-core, system ]
 
 - name: copy content to installation folder
   synchronize:
     src: "/tmp/{{ sweagle_version }}/full/"
     dest: "{{ sweagle_installation_folder }}"
   delegate_to: "{{ inventory_hostname }}"
-  tags: [ sweagle-core, sweagle ]
+  tags: [ sweagle, sweagle-core ]
 
 - name: set correct version in "{{ sweagle_installation_folder }}/appRelease.settings"
   replace:
     path: "{{ sweagle_installation_folder }}/scripts/config/appRelease.settings"
     regexp: '\d+\.\d+\.\d+'
     replace: "{{ sweagle_version }}"
-  tags: [ sweagle-core, sweagle ]
+  tags: [ sweagle, sweagle-core ]
 
 - name: make shell scripts in "{{ sweagle_installation_folder }}/scripts" executable
   file:
     dest: "{{ sweagle_installation_folder }}/scripts"
     mode: a+x
-  tags: [ sweagle-core, sweagle ]
+  tags: [ sweagle, sweagle-core ]
 
-- name: configure SWEAGLE core application.yml
+- name: configure core application.yml
   template:
     src: "{{ sweagle_version }}/core-application.yml.j2"
     dest: "{{ sweagle_installation_folder }}/bin/core/application.yml"
-  tags: [ sweagle-core, sweagle ]
+  tags: [ sweagle, sweagle-core ]
 
 - name: configure core appConfig.settings
   template:
@@ -107,7 +113,7 @@
     group: "{{ sweagle_system_group }}"
     recurse: yes
   become: true
-  tags: [ sweagle-core, sweagle ]
+  tags: [ sweagle, sweagle-core ]
 
 - name: create SWEAGLE core services
   include: create-services.yml
@@ -123,11 +129,6 @@
 - name: Execute prepare tenant script
   shell: "{{ sweagle_installation_folder }}/scripts/prepareTenantNew.sh {{ sweagle_tenant }}"
   tags: [ sweagle, sweagle-core ]
-
-- name: Configure SWEAGLE web site
-  include: configure-sweagle-web.yml
-  hosts: webservers
-  tags: [ sweagle, sweagle-web ]
 
 
 #  shell: "chmod +x {{sweagle_installation_folder }}/scripts/*.sh"
