--- a/roles/sweagle/tasks/main.yml
+++ b/roles/sweagle/tasks/main.yml
@@ -17,7 +17,7 @@
     state: present
   become: true
   become_user: root
-  tags: [ sweagle, sweagle-core, sweagle-web, system ]
+  tags: [ sweagle, sweagle-core, system ]
   ignore_errors: true
 
 #- name: Allow 'wheel' group to have passwordless sudo
