--- a/roles/sweagle/tasks/configure-sweagle-web.yml
+++ b/roles/sweagle/tasks/configure-sweagle-web.yml
@@ -16,8 +16,8 @@
 
 - name: Configure web site
   template:
-    src: "{{ sweagle_version }}/default.j2"
-    dest: "/etc/nginx/conf.d/default"
+    src: "{{ sweagle_version }}/default.conf.j2"
+    dest: "/etc/nginx/conf.d/default.conf"
   become: true
   tags: [ sweagle, sweagle-web ]
 
