remove useless files

--- a/clean-all.yml
+++ b/clean-all.yml
@@ -9,7 +9,7 @@
       with_items:
         - elasticsearch
         - mongodb
-        - mysqld
+        - mysql
         - nginx
         - sweagleScriptExecutor
         - sweagleCore
