--- a/roles/sweagle/tasks/main.yml
+++ b/roles/sweagle/tasks/main.yml
@@ -7,7 +7,7 @@
   tags: [ sweagle, sweagle-core, sweagle-web ]
 
 - name: Configure SWEAGLE web site
-  include: configure-sweagle-web.yml
+  import_playbook: configure-sweagle-web.yml
   hosts: webservers
   tags: [ sweagle, sweagle-web ]
 
