--- a/clean-all.yml
+++ b/clean-all.yml
@@ -46,12 +46,12 @@
       with_items:
         - "{{ es_data_dirs }}"
         - "{{ es_log_dir }}"
-        - "/etc/opt/vault"
-        - "/etc/elasticsearch"
-        - "/etc/vault.d"
+  #      - "/etc/opt/vault"
+  #      - "/etc/elasticsearch"
+  #      - "/etc/vault.d"
         - "{{ mongodb_storage_dbpath }}"
         - "{{ sweagle_installation_folder }}"
-        - "/usr/bin/vault*"
+  #      - "/usr/bin/vault*"
         - "/var/log/mongodb"
         - "/var/log/mysql"
         - "/var/log/nginx"
