--- a/roles/elasticsearch/tasks/compatibility-variables.yml
+++ b/roles/elasticsearch/tasks/compatibility-variables.yml
@@ -18,13 +18,13 @@
     es_other_package_name: "elasticsearch-oss"
     es_other_repo_name: "{{ 'oss-' + es_major_version }}"
     es_other_apt_url: "deb {{ es_repo_base }}/packages/{{ 'oss-' + es_major_version }}/apt stable main"
-  tags: elasticsearch
+  tags: [ elasticsearch, sweagle, sweagle-elasticsearch ]
 
 - name: Detect if es_version is before X-Pack was open and included
   set_fact:
     es_open_xpack: false
   when: "es_version is version_compare('6.3.0', '<')"
-  tags: elasticsearch
+  tags: [ elasticsearch, sweagle, sweagle-elasticsearch ]
 
 - name: If this is an older version we need to install X-Pack as a plugin and use a different users command
   set_fact:
@@ -34,7 +34,7 @@
   when:
     - not es_open_xpack
     - es_enable_xpack
-  tags: elasticsearch
+  tags: [ elasticsearch, sweagle, sweagle-elasticsearch ]
 
 - name: Use the oss repo and package if xpack is not being used
   set_fact:
@@ -46,4 +46,4 @@
   when:
     - es_open_xpack
     - not es_enable_xpack
-  tags: elasticsearch
+  tags: [ elasticsearch, sweagle, sweagle-elasticsearch ]
