--- a/roles/elasticsearch/tasks/elasticsearch-optional-user.yml
+++ b/roles/elasticsearch/tasks/elasticsearch-optional-user.yml
@@ -1,6 +1,6 @@
 ---
 #Add the elasticsearch user before installing from packages.
-- name: Ensure optional elasticsearch group is created with the correct id.
+- name: Ensure optional elasticsearch group is created with the correct id
   become: yes
   #Restart if these change
   notify: restart elasticsearch
@@ -9,9 +9,21 @@
     name: "{{ es_group }}"
     system: yes
     gid: "{{ es_group_id }}"
+  when: es_group_id is defined
   tags: [ elasticsearch, sweagle, sweagle-elasticsearch ]
 
-- name: Ensure optional elasticsearch user is created with the correct id.
+- name: Ensure optional elasticsearch group is created
+  become: yes
+  #Restart if these change
+  notify: restart elasticsearch
+  group:
+    state: present
+    name: "{{ es_group }}"
+    system: yes
+  tags: [ elasticsearch, sweagle, sweagle-elasticsearch ]
+
+
+- name: Ensure optional elasticsearch user is created with the correct id
   become: yes
   #Restart if these change
   notify: restart elasticsearch
@@ -22,5 +34,19 @@
     system: yes
     createhome: no
     uid: "{{ es_user_id }}"
+    group: "{{ es_group }}"
+  when: es_user_id is defined
+  tags: [ elasticsearch, sweagle, sweagle-elasticsearch ]
+
+- name: Ensure optional elasticsearch user is created
+  become: yes
+  #Restart if these change
+  notify: restart elasticsearch
+  user:
+    state: present
+    name: "{{ es_user }}"
+    comment: elasticsearch system user
+    system: yes
+    createhome: no
     group: "{{ es_group }}"
   tags: [ elasticsearch, sweagle, sweagle-elasticsearch ]
