--- a/roles/elasticsearch/tasks/main.yml
+++ b/roles/elasticsearch/tasks/main.yml
@@ -54,7 +54,7 @@
   become: true
   become_user: root
   when: es_start_service
-  tags: [ elasticsearch ]
+  tags: [ elasticsearch, sweagle, sweagle-elasticsearch ]
 
 - name: Wait for elasticsearch to startup
   wait_for: host={{es_api_host}} port={{es_api_port}} delay=5 connect_timeout=1
