--- a/all-install.yml
+++ b/all-install.yml
@@ -9,19 +9,22 @@
 ## Copy your SWEAGLE license in parameter sweagle_license_key to /inventories/all-in-one/group_vars
 
 ## Test with
-# ansible-playbook all-in-one-install.yml -i ./inventories/all-in-one/hosts.yml --check
+# ansible-playbook all-install.yml -i ./inventories/all-in-one/hosts.yml --check
 
 ## For full installation (including prerequisites)
-# ansible-playbook all-in-one-install.yml -i ./inventories/all-in-one/hosts.yml
+# ansible-playbook all-install.yml -i ./inventories/all-in-one/hosts.yml
+## For localhost installation, in case of host unreachable, use
+# ansible-playbook all-install.yml -i ./inventories/all-in-one/hosts.yml --connection local
+
 
 ## For SWEAGLE installation (prerequisites already installed)
 ## (check before that prerequisites are well installed)
-# ansible-playbook all-in-one-install.yml -i ./inventories/all-in-one/hosts.yml--tags sweagle
+# ansible-playbook all-install.yml -i ./inventories/all-in-one/hosts.yml--tags sweagle
 
 ## To install only a specifif component or prerequisite
-# ansible-playbook all-in-one-install.yml -i ./inventories/all-in-one/hosts.yml --tags "<COMPONENT>"
+# ansible-playbook all-install.yml -i ./inventories/all-in-one/hosts.yml --tags "<COMPONENT>"
 ## Example to do only mySQL:
-# ansible-playbook all-in-one-install.yml -i ./inventories/all-in-one/hosts.yml --tags mysql
+# ansible-playbook all-install.yml -i ./inventories/all-in-one/hosts.yml --tags mysql
 
 - hosts: all
   roles:
