--- a/roles/system/tasks/main.yml
+++ b/roles/system/tasks/main.yml
@@ -5,10 +5,12 @@
     state: stopped
     enabled: false
   become: true
-  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
+  when: ansible_distribution == 'CentOS'
+    or ansible_distribution == 'RedHat'
+    or ansible_distribution == 'Red Hat Enterprise Linux'
   tags: system
 
-- name: install screen, jq and telnet
+- name: install screen, jq and telnet on Debian family
   package:
     pkg: "{{ item }}"
     state: present
@@ -17,6 +19,22 @@
     - telnet
     - jq
   become: true
+  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+  tags: system
+
+- name: install screen, jq and telnet on Red Hat family
+  package:
+    pkg: "{{ item }}"
+    state: present
+  with_items:
+    - screen
+    - telnet
+    - epel-release
+    - jq
+  become: true
+  when: ansible_distribution == 'CentOS'
+    or ansible_distribution == 'RedHat'
+    or ansible_distribution == 'Red Hat Enterprise Linux'
   tags: system
 
 - name: disable selinux at runtime
