--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,14 +1,25 @@
 ---
 # Install MYSQL
+- name: Create a group of all hosts by ansible_distribution
+  group_by: key={{ansible_distribution}}
+
+- hosts: CentOS or RedHat
+  vars:
+    mySQL_packages: [ mysql-server, mysql-client, mysql-common, python-mysqldb ]
+
+- hosts: Ubuntu or Debian
+  vars:
+    mySQL_packages:
+      - mysql-server
+      - mysql-client
+      - mysql-common
+      - python-mysqldb
+
 - name: Install MySQL packages
   package:
     name: "{{ item }}"
     state: present
-  with_items:
-    - mysql-server
-    - mysql-client
-    - mysql-common
-    - python-mysqldb
+  with_items: "{{ mySQL_packages }}"
   become: true
   become_user: root
   tags: mysql
