--- a/roles/mysql/default/main.yml
+++ b/roles/mysql/default/main.yml
@@ -5,3 +5,6 @@ mysql_root_password: root
 mysql_authentication_plugin: mysql_native_password
 mysql_config_dir: /etc/mysql
 mysql_port: 3306
+
+# List of default packages to use for MySQL installation
+mySQL_packages: [ mysql-server, mysql-client, mysql-common, python-mysqldb ]
