--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,33 +1,32 @@
 ---
 # Install MYSQL
-- name: Create a group of hosts by ansible_distribution
-  group_by: key={{ansible_distribution}}
+- name: Install MySQL packages for Red Hat
+  package:
+    name: "{{ item }}"
+    state: present
+  with_items:
+    - mysql-community-server
+    - mysql-community-client
+    - MySQL-python
+  become: true
+  become_user: root
+  when: ansible_distribution == 'CentOS'
+    or ansible_distribution == 'RedHat'
+    or ansible_distribution == 'Red Hat Enterprise Linux'
   tags: mysql
 
-- hosts: RedHat
-  - name: Install MySQL packages for Red Hat
-    package:
-      name: "{{ item }}"
-      state: present
-    with_items: [ mysql-community-server, mysql-client, mysql-common, python-mysqldb ]
-    become: true
-    become_user: root
-    tags: mysql
-
-- hosts: Debian
-  - name: Install MySQL packages for Debian
-    package:
-      name: "{{ item }}"
-      state: present
-    with_items: [ mysql-server, mysql-client, mysql-common, python-mysqldb ]
-    become: true
-    become_user: root
-    tags: mysql
-
-#List of packages for CentOS
-#    - mysql-community-server
-#    - mysql-community-client
-#    - MySQL-python
+- name: Install MySQL packages for Debian
+  package:
+    name: "{{ item }}"
+    state: present
+  with_items:
+    - mysql-server
+    - mysql-common
+    - python-mysqldb
+  become: true
+  become_user: root
+  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+  tags: mysql
 
 - name: Configure MySQL
   template:
