--- a/roles/mysql/default/main.yml
+++ b/roles/mysql/default/main.yml
@@ -3,5 +3,6 @@
 mysql_root_user: root
 mysql_root_password: root
 mysql_authentication_plugin: mysql_native_password
-mysql_config_dir: /etc/mysql
 mysql_port: 3306
+
+mysql_config_dir: "/etc/mysql"
