--- a/all-install.yml
+++ b/all-install.yml
@@ -33,6 +33,7 @@
 - hosts: dbservers
   roles:
     - mysql
+      become: true
     - mongodb
 ## Check mongo connection
 # mongo -u staticTreeUser -p staticTreePassword localhost:27017/sweagle
