--- a/inventories/all-in-one/group_vars/dbservers.yml
+++ b/inventories/all-in-one/group_vars/dbservers.yml
@@ -8,6 +8,8 @@ mysql_port: "{{ sweagle_mysql_port }}"
 # MySQL root user and password
 mysql_root_user: root
 mysql_root_password: root
+mysql_root_password_update: false
+
 
 ###################################################
 ###   MONGODB
