--- a/roles/mysql/default/main.yml
+++ b/roles/mysql/default/main.yml
@@ -1,6 +1,8 @@
 ---
 # Default values for MYSQL parameters
+mysql_port: 3306
+
 mysql_root_user: root
 mysql_root_password: root
+mysql_root_password_update: false
 mysql_authentication_plugin: mysql_native_password
-mysql_port: 3306
