--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -24,6 +24,62 @@
   become_user: root
   tags: mysql
 
+- name: Check mysql service is running
+  service:
+    name: "{{ mysql_daemon }}"
+    enabled: yes
+    state: started
+  tags: mysql
+
+- name: Get MySQL version.
+  command: 'mysql --version'
+  register: mysql_cli_version
+  changed_when: false
+  check_mode: false
+
+# Set root password for MySQL >= 5.7.x.
+- name: Update MySQL root password for localhost root account (5.7.x).
+  shell: >
+    mysql -u root -NBe
+    'ALTER USER "{{ mysql_root_user }}"@localhost
+    IDENTIFIED WITH mysql_native_password BY "{{ mysql_root_password }}";'
+  become: true
+  become_user: root
+  when: mysql_root_password_update
+    and ('5.7.' in mysql_cli_version.stdout or '8.0.' in mysql_cli_version.stdout)
+  tags: mysql
+
+# Set root password for MySQL < 5.7.x.
+- name: Update MySQL root password for localhost root account (< 5.7.x).
+  shell: >
+    mysql -NBe
+    'SET PASSWORD FOR "{{ mysql_root_user }}"@localhost = PASSWORD("{{ mysql_root_password }}");'
+  become: true
+  become_user: root
+  when: mysql_root_password_update
+    and ('5.7.' not in mysql_cli_version.stdout and '8.0.' not in mysql_cli_version.stdout)
+  tags: mysql
+
+#- name: Find temporary root password
+#  shell: "echo `grep 'temporary.*root@localhost' /var/log/mysqld.log | sed 's/.*root@localhost: //'`"
+#  register: mysql_root_password_temp
+#  when: mysql_root_password_update and ansible_os_family == "RedHat"
+#  tags: mysql
+
+##- debug:
+#    msg: "{{ mysql_root_password_temp.stdout }}"
+#  when: mysql_root_password_update and ansible_os_family == "RedHat"
+#  tags: mysql
+
+#- name: Set new root password
+#  shell: 'mysql -e "SET PASSWORD = PASSWORD(''{{ mysql_root_password }}'');" --connect-expired-password -uroot -p"{{ mysql_root_password_temp.stdout }}"'
+#  shell: 'mysql -e "SET PASSWORD = PASSWORD(''{{ mysql_root_password }}'');" --connect-expired-password -uroot'
+#  become: true
+#  become_user: root
+#  when: mysql_root_password_update
+#  tags: mysql
+
+# Has to be after the password assignment, for idempotency.
 - name: Configure MySQL
   template:
     src: "my.cnf.j2"
@@ -32,32 +88,6 @@
   become: true
   become_user: root
   notify: "Restart mysql"
-  tags: mysql
-
-- name: Check mysql service is running
-  service:
-    name: "{{ mysql_daemon }}"
-    enabled: yes
-    state: started
-  tags: mysql
-
-- name: Find temporary root password
-  shell: "echo `grep 'temporary.*root@localhost' /var/log/mysqld.log | sed 's/.*root@localhost: //'`"
-  register: mysql_root_password_temp
-  when: mysql_root_password_update and ansible_os_family == "RedHat"
-  tags: mysql
-
-- debug:
-    msg: "{{ mysql_root_password_temp.stdout }}"
-  when: mysql_root_password_update and ansible_os_family == "RedHat"
-  tags: mysql
-
-- name: Set new root password
-#  shell: 'mysql -e "SET PASSWORD = PASSWORD(''{{ mysql_root_password }}'');" --connect-expired-password -uroot -p"{{ mysql_root_password_temp.stdout }}"'
-  shell: 'mysql -e "SET PASSWORD = PASSWORD(''{{ mysql_root_password }}'');" --connect-expired-password -uroot'
-  become: true
-  become_user: root
-  when: mysql_root_password_update
   tags: mysql
 
 - name: Include SWEAGLE configuration.yml
