--- a/all-install.yml
+++ b/all-install.yml
@@ -32,7 +32,7 @@
 
 - hosts: dbservers
   roles:
-    - mysql.new
+    - mysql
     - mongodb
 ## Check mongo connection
 # mongo -u staticTreeUser -p staticTreePassword localhost:27017/sweagle
