--- a/roles/mysql/vars/Debian.yml
+++ b/roles/mysql/vars/Debian.yml
@@ -1,4 +1,4 @@
 mysql_daemon: mysql
 mysql_packages: ['mysql-server', 'mysql-common', 'python-mysqldb']
 
-mysql_config_dir: "/etc/mysql"
+mysql_config_dir: "/etc"
