--- a/roles/mysql/tasks/configure-sweagle.yml
+++ b/roles/mysql/tasks/configure-sweagle.yml
@@ -11,7 +11,7 @@
   mysql_db:
     name: "{{ item }}"
     state: present
-    login_user: root
+    login_user: "{{ mysql_root_user }}"
     login_password: "{{ mysql_root_password }}"
   with_items:
     - "{{ sweagle_mysql_db }}"
@@ -21,7 +21,7 @@
 
 - name: Grant all privileges on SWEAGLE MySQL schemas to "{{ sweagle_mysql_user }}"
   mysql_user:
-    login_user: root
+    login_user: "{{ mysql_root_user }}"
     login_password: "{{ mysql_root_password }}"
     name: "{{ sweagle_mysql_user }}"
     password: "{{ sweagle_mysql_password }}"
