--- a/roles/mongodb/tasks/install.redhat.yml
+++ b/roles/mongodb/tasks/install.redhat.yml
@@ -9,6 +9,7 @@
   package:
     name: epel-release
     state: present
+  become: true
   tags: mongodb
 
 - name: Add YUM repository
@@ -19,6 +20,7 @@
   with_items: "{{ mongodb_major_version }}"
   loop_control:
     loop_var: version_item
+  become: true
   when: mongodb_package == 'mongodb-org'
   tags: mongodb
 
@@ -30,18 +32,21 @@
   yum:
     name: "{{ mongodb_package }}{% if (mongodb_version | length > 3) %}={{ mongodb_version }}{% endif %}"
     state: "{{ mongodb_package_state }}"
+  become: true
   tags: mongodb
 
 - name: Install numactl package
   yum:
     name: numactl
     state: present
+  become: true
   tags: mongodb
 
 - name: Install PyMongo package
   yum:
     name: python-pymongo
     state: present
+  become: true
   when: not mongodb_pymongo_from_pip
   tags: mongodb
 
@@ -50,6 +55,7 @@
     name:
       - python-devel
       - python-pip
+  become: true
   when: mongodb_pymongo_from_pip | bool
   tags: mongodb
 
@@ -58,5 +64,6 @@
     name: pymongo
     state: "{{ mongodb_pymongo_pip_version is defined | ternary('present', 'latest') }}"
     version: "{{ mongodb_pymongo_pip_version | default(omit) }}"
+  become: true
   when: mongodb_pymongo_from_pip | bool
   tags: mongodb
