--- a/roles/mongodb/defaults/main.yml
+++ b/roles/mongodb/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 
-mongodb_package: mongodb-org
+mongodb_package: mongodb-org          # please check package for each distribution in /vars
 mongodb_package_state: present
 mongodb_version: "4.0"
 mongodb_apt_keyserver: keyserver.ubuntu.com
