--- a/roles/mongodb/vars/RedHat.yml
+++ b/roles/mongodb/vars/RedHat.yml
@@ -1,4 +1,5 @@
 ---
+mongodb_package: mongodb-org
 
 mongodb_repository:
   "3.4": "https://repo.mongodb.org/yum/redhat/$releasever/mongodb-org/3.4/$basearch/"
