--- a/roles/mongodb/tasks/disable_transparent_hugepages.yml
+++ b/roles/mongodb/tasks/disable_transparent_hugepages.yml
@@ -9,6 +9,7 @@
   with_first_found:
     - "disable-transparent-hugepages.{{ ansible_distribution | lower }}.service"
     - "disable-transparent-hugepages.{{ ansible_os_family | lower }}.service"
+  tags: mongodb
 
 - name: Enable disable-transparent-hugepages.service
   systemd:
@@ -16,3 +17,4 @@
     daemon-reload: true
     enabled: true
     state: started
+  tags: mongodb
