--- a/roles/mysql/tasks/configure-sweagle.yml
+++ b/roles/mysql/tasks/configure-sweagle.yml
@@ -1,5 +1,4 @@
 ---
-
 - name: Make sure MySQL service is running
   systemd:
     state: started
@@ -33,4 +32,5 @@
     - "{{ sweagle_mysql_db }}"
     - vault
   become: true
+  when: ansible_os_family == "Debian"
   tags: [mysql, sweagle, sweagle-mysql]
