--- a/roles/mysql/tasks/configure-sweagle.yml
+++ b/roles/mysql/tasks/configure-sweagle.yml
@@ -18,18 +18,40 @@
   become: true
   tags: [mysql, sweagle, sweagle-mysql]
 
-- name: Grant all privileges on SWEAGLE MySQL schemas to "{{ sweagle_mysql_user }}"
+- name: Create SWEAGLE MySQL user "{{ sweagle_mysql_user }} for Red Hat"
+  shell:
+    'mysql -e "mysql -e "CREATE USER '{{ sweagle_mysql_user }}@'%' IDENTIFIED BY '{{ sweagle_mysql_password }}'; -"{{ mysql_root_user }}" -p"{{ mysql_root_password }}"'
+  with_items:
+    - "{{ sweagle_mysql_db }}"
+    - vault
+  become: true
+  when: ansible_os_family == "RedHat"
+  tags: [mysql, sweagle, sweagle-mysql]
+
+- name: Grant all privileges on SWEAGLE MySQL schemas to "{{ sweagle_mysql_user }} for Red Hat"
+  shell:
+    'mysql -e "GRANT ALL PRIVILEGES ON {{ item }}.* TO '{{ sweagle_mysql_user }}'@'%'; -"{{ mysql_root_user }}" -p"{{ mysql_root_password }}"'
+  with_items:
+    - "{{ sweagle_mysql_db }}"
+    - vault
+  become: true
+  when: ansible_os_family == "RedHat"
+  notify: Restart mysql
+  tags: [mysql, sweagle, sweagle-mysql]
+
+- name: Grant all privileges on SWEAGLE MySQL schemas to "{{ sweagle_mysql_user }} for Debian"
   mysql_user:
     login_user: "{{ mysql_root_user }}"
     login_password: "{{ mysql_root_password }}"
     name: "{{ sweagle_mysql_user }}"
     password: "{{ sweagle_mysql_password }}"
-    priv: "{{ item }}.*:ALL,GRANT"
+    priv: "{{ item }}.*:ALL"
     host: '%'
     state: present
   with_items:
     - "{{ sweagle_mysql_db }}"
     - vault
   become: true
-  #when: ansible_os_family == "Debian"
+  when: ansible_os_family == "Debian"
+  notify: Restart mysql
   tags: [mysql, sweagle, sweagle-mysql]
