--- a/roles/mysql/tasks/configure-sweagle.yml
+++ b/roles/mysql/tasks/configure-sweagle.yml
@@ -19,18 +19,17 @@
   tags: [mysql, sweagle, sweagle-mysql]
 
 - name: Create SWEAGLE MySQL user "{{ sweagle_mysql_user }} for Red Hat"
-  shell:
-    'mysql -e "mysql -e "CREATE USER '{{ sweagle_mysql_user }}@'%' IDENTIFIED BY '{{ sweagle_mysql_password }}'; -"{{ mysql_root_user }}" -p"{{ mysql_root_password }}"'
-  with_items:
-    - "{{ sweagle_mysql_db }}"
-    - vault
+  shell: >
+    mysql -u "{{ mysql_root_user }}" -p "{{ mysql_root_password }}" -NBe
+    'CREATE USER "{{ sweagle_mysql_user }}"@"%"
+    IDENTIFIED WITH mysql_native_password BY "{{ sweagle_mysql_password }}";'
   become: true
   when: ansible_os_family == "RedHat"
   tags: [mysql, sweagle, sweagle-mysql]
 
 - name: Grant all privileges on SWEAGLE MySQL schemas to "{{ sweagle_mysql_user }} for Red Hat"
   shell:
-    'mysql -e "GRANT ALL PRIVILEGES ON {{ item }}.* TO '{{ sweagle_mysql_user }}'@'%'; -"{{ mysql_root_user }}" -p"{{ mysql_root_password }}"'
+    'mysql -e "GRANT ALL PRIVILEGES ON {{ item }}.* TO '{{ sweagle_mysql_user }}'@'%'; -u"{{ mysql_root_user }}" -p"{{ mysql_root_password }}"'
   with_items:
     - "{{ sweagle_mysql_db }}"
     - vault
