--- a/roles/mysql/tasks/configure-sweagle.yml
+++ b/roles/mysql/tasks/configure-sweagle.yml
@@ -28,8 +28,9 @@
   tags: [mysql, sweagle, sweagle-mysql]
 
 - name: Grant all privileges on SWEAGLE MySQL schemas to "{{ sweagle_mysql_user }} for Red Hat"
-  shell:
-    'mysql -e "GRANT ALL PRIVILEGES ON {{ item }}.* TO '{{ sweagle_mysql_user }}'@'%'; -u"{{ mysql_root_user }}" -p"{{ mysql_root_password }}"'
+  shell: >
+    mysql -u "{{ mysql_root_user }}" -p "{{ mysql_root_password }}" -NBe
+    'GRANT ALL PRIVILEGES ON "{{ item }}".* TO "{{ sweagle_mysql_user }}"@"%";'
   with_items:
     - "{{ sweagle_mysql_db }}"
     - vault
