--- a/roles/mysql/tasks/configure-sweagle.yml
+++ b/roles/mysql/tasks/configure-sweagle.yml
@@ -20,8 +20,8 @@
 
 - name: Create SWEAGLE MySQL user "{{ sweagle_mysql_user }}" for Red Hat
   shell: >
-    mysql -u "{{ mysql_root_user }}" -p "{{ mysql_root_password }}" -e
-    'CREATE USER "{{ sweagle_mysql_user }}"@''%''
+    mysql -u {{ mysql_root_user }} -e
+    'CREATE USER {{ sweagle_mysql_user }}@\'%\'
     IDENTIFIED WITH mysql_native_password BY "{{ sweagle_mysql_password }}";'
   become: true
   when: ansible_os_family == "RedHat"
