--- a/roles/mysql/tasks/configure-sweagle.yml
+++ b/roles/mysql/tasks/configure-sweagle.yml
@@ -20,9 +20,9 @@
 
 - name: Create SWEAGLE MySQL user "{{ sweagle_mysql_user }}" for Red Hat
   shell: >
-    mysql -u {{ mysql_root_user }} -e
-    'CREATE USER {{ sweagle_mysql_user }}@\'%\'
-    IDENTIFIED WITH mysql_native_password BY "{{ sweagle_mysql_password }}";'
+    mysql --user={{ mysql_root_user }} --password={{ mysql_root_password }}
+    --execute="CREATE USER {{ sweagle_mysql_user }}@'%'
+    IDENTIFIED WITH mysql_native_password BY {{ sweagle_mysql_password }}"
   become: true
   when: ansible_os_family == "RedHat"
   tags: [mysql, sweagle, sweagle-mysql]
