--- a/roles/mysql/tasks/configure-sweagle.yml
+++ b/roles/mysql/tasks/configure-sweagle.yml
@@ -27,17 +27,17 @@
 #  when: ansible_os_family == "RedHat"
 #  tags: [mysql, sweagle, sweagle-mysql]
 
-- name: Grant all privileges on SWEAGLE MySQL schemas to "{{ sweagle_mysql_user }}" for Red Hat
-  shell: >
-    mysql -u {{ mysql_root_user }} -p {{ mysql_root_password }} -e
-    "GRANT ALL PRIVILEGES ON {{ item }}.* TO '{{ sweagle_mysql_user }}'@'%' IDENTIFIED WITH mysql_native_password BY '{{ sweagle_mysql_password }}'"
-  with_items:
-    - "{{ sweagle_mysql_db }}"
-    - vault
-  become: true
-  when: ansible_os_family == "RedHat"
-  notify: Restart mysql
-  tags: [mysql, sweagle, sweagle-mysql]
+#- name: Grant all privileges on SWEAGLE MySQL schemas to "{{ sweagle_mysql_user }}" for Red Hat
+#  shell: >
+#    mysql -u {{ mysql_root_user }} -p {{ mysql_root_password }} -e
+#    "GRANT ALL PRIVILEGES ON {{ item }}.* TO '{{ sweagle_mysql_user }}'@'%' IDENTIFIED WITH mysql_native_password BY '{{ sweagle_mysql_password }}'"
+#  with_items:
+#    - "{{ sweagle_mysql_db }}"
+#    - vault
+#  become: true
+#  when: ansible_os_family == "RedHat"
+#  notify: Restart mysql
+#  tags: [mysql, sweagle, sweagle-mysql]
 
 - name: Grant all privileges on SWEAGLE MySQL schemas to "{{ sweagle_mysql_user }} for Debian"
   mysql_user:
@@ -52,6 +52,6 @@
     - "{{ sweagle_mysql_db }}"
     - vault
   become: true
-  when: ansible_os_family == "Debian"
+#  when: ansible_os_family == "Debian"
   notify: Restart mysql
   tags: [mysql, sweagle, sweagle-mysql]
