--- a/roles/mysql/tasks/configure-sweagle.yml
+++ b/roles/mysql/tasks/configure-sweagle.yml
@@ -18,18 +18,9 @@
   become: true
   tags: [mysql, sweagle, sweagle-mysql]
 
-#- name: Create SWEAGLE MySQL user "{{ sweagle_mysql_user }}" for Red Hat
-#  shell: >
-#    mysql --user={{ mysql_root_user }} --password={{ mysql_root_password }}
-#    --execute="CREATE USER {{ sweagle_mysql_user }}@'%'
-#    IDENTIFIED WITH mysql_native_password BY {{ sweagle_mysql_password }}"
-#  become: true
-#  when: ansible_os_family == "RedHat"
-#  tags: [mysql, sweagle, sweagle-mysql]
-
 #- name: Grant all privileges on SWEAGLE MySQL schemas to "{{ sweagle_mysql_user }}" for Red Hat
 #  shell: >
-#    mysql -u {{ mysql_root_user }} -p {{ mysql_root_password }} -e
+#    mysql -u {{ mysql_root_user }} -p -e
 #    "GRANT ALL PRIVILEGES ON {{ item }}.* TO '{{ sweagle_mysql_user }}'@'%' IDENTIFIED WITH mysql_native_password BY '{{ sweagle_mysql_password }}'"
 #  with_items:
 #    - "{{ sweagle_mysql_db }}"
@@ -39,7 +30,7 @@
 #  notify: Restart mysql
 #  tags: [mysql, sweagle, sweagle-mysql]
 
-- name: Grant all privileges on SWEAGLE MySQL schemas to "{{ sweagle_mysql_user }} for Debian"
+- name: Grant all privileges on SWEAGLE MySQL schemas to "{{ sweagle_mysql_user }}"
   mysql_user:
     login_user: "{{ mysql_root_user }}"
     login_password: "{{ mysql_root_password }}"
@@ -52,6 +43,5 @@
     - "{{ sweagle_mysql_db }}"
     - vault
   become: true
-#  when: ansible_os_family == "Debian"
   notify: Restart mysql
   tags: [mysql, sweagle, sweagle-mysql]
