--- a/roles/sweagle/tasks/main.yml
+++ b/roles/sweagle/tasks/main.yml
@@ -11,10 +11,13 @@
   hosts: webservers
   tags: [ sweagle, sweagle-web ]
 
-- name: Make sure we have a 'wheel' group
+- name: Make sure we have a sudo or wheel group
   group:
-    name: wheel
+    name: "{{ item }}"
     state: present
+  with_items:
+    - wheel
+    - sudo
   become: true
   become_user: root
   tags: [ sweagle, sweagle-core, system ]
