--- a/roles/mysql/tasks/configure-sweagle.yml
+++ b/roles/mysql/tasks/configure-sweagle.yml
@@ -20,7 +20,7 @@
 
 #- name: Grant all privileges on SWEAGLE MySQL schemas to "{{ sweagle_mysql_user }}" for Red Hat
 #  shell: >
-#    mysql -u {{ mysql_root_user }} -p -e
+#    mysql -u {{ mysql_root_user }} -p{{ mysql_root_password }} -e
 #    "GRANT ALL PRIVILEGES ON {{ item }}.* TO '{{ sweagle_mysql_user }}'@'%' IDENTIFIED WITH mysql_native_password BY '{{ sweagle_mysql_password }}'"
 #  with_items:
 #    - "{{ sweagle_mysql_db }}"
